--- a/status-mon/status-mon.cabal
+++ b/status-mon/status-mon.cabal
@@ -1,24 +1,23 @@
-cabal-version:      2.4
+cabal-version:      3.4
 name:               status-mon
 version:            0.1.0.0
-
--- A short (one-line) description of the package.
-synopsis: Reads in messages from plant-mon and sends them to twitter
+synopsis:
 
 -- A longer description of the package.
 -- description:
+homepage:
 
 -- A URL where users can report bugs.
 -- bug-reports:
-
--- The license under which the package is released.
--- license:
+license:            MIT
+license-file:       LICENSE
 author:             Mike Kaliman
 maintainer:         kaliman.mike@gmail.com
 
 -- A copyright notice.
 -- copyright:
 -- category:
+extra-source-files: CHANGELOG.md
 
 executable status-mon
     main-is:          Main.hs
@@ -28,6 +27,9 @@ executable status-mon
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
-    build-depends:    base ^>=4.14.1.0
+    build-depends:
+        base ^>=4.14.1.0
+      , twitter-conduit >= 0.5.1
+
     hs-source-dirs:   app
     default-language: Haskell2010
